# cabal2spec

./: .travis.yml  README.md  cabal.project  cabal2spec.cabal  cabal2spec.spec.golden
.circleci/: config.yml
.github/workflows/: haskell-ci.yml  hlint.yml
cabal2spec/: Main.hs
src/: Cabal2Spec.hs  Main.hs
test/: Main.hs
test/golden-test-cases/: .gitignore  AC-Vector-2.3.2.spec.golden  ALUT-2.4.0.2.spec.golden  Agda.spec.golden  BNFC-2.8.1.spec.golden  BiobaseNewick.spec.golden  BlastHTTP-1.2.1.spec.golden  Boolean-0.2.4.spec.golden  BoundedChan.spec.golden  ChannelT-0.0.0.4.spec.golden  Chart-cairo.spec.golden  Chart-diagrams.spec.golden  Chart.spec.golden  ChasingBottoms-1.3.1.3.spec.golden  ChasingBottoms.spec.golden  Clipboard.spec.golden  ClustalParser.spec.golden  ConfigFile.spec.golden  DAV.spec.golden  DRBG.spec.golden  Decimal.spec.golden  Diff-0.3.4.spec.golden  Earley-0.12.0.1.spec.golden  Earley.spec.golden  Ebnf2ps.spec.golden  EdisonAPI.spec.golden  EdisonCore.spec.golden  EntrezHTTP-1.0.4.spec.golden  FPretty.spec.golden  FenwickTree.spec.golden  FindBin-0.0.5.spec.golden  FloatingHex.spec.golden  FontyFruity.spec.golden  ForestStructures-0.0.0.2.spec.golden  Frames.spec.golden  GLFW-b-1.4.8.1.spec.golden  GLURaw.spec.golden  GLUT.spec.golden  GPipe-2.2.3.spec.golden  GPipe-GLFW.spec.golden  (+2873 more)
